**  denotes quite substantial/important changes
*** denotes really big changes 

1.7-14

** bam now has method="fREML" option which uses faster REML optimizer: 
   can make a big difference on parameter rich models.

* underlying "cr" basis code re-written for greater efficiency.

* routine mgcv removed, it now being many years since there has been any 
  reason to use it. C source code heavily pruned as a result. 

* coefficient name generation moved from estimate.gam to gam.setup.

* smooth2random.tensor.smooth had a bug that could produce a nonsensical
  penalty null space rank and an error, in some cases (e.g. "cc" basis)
  causing te terms to fail in gamm. Fixed.

* minor change to te constructor. Any unpenalized margin now has 
  corresponding penalty rank dropped along with penalty.

* Code for handling sp's fixed at exactly zero was badly thought out, and 
  could easily fail. fixed.

* TPRS prediction code made more efficient, partly by use of BLAS. Large
  dataset setup also made more efficient using BLAS.

* bam now uses LAPACK version of qr, for model matrix QR, since it's 
  faster and uses BLAS.

1.7-13

** The Lanczos routine in mat.c was using a stupidly inefficient check for 
  convergence of the largest magnitude eigenvectors. This resulted in 
  far too many Lanczos steps being used in setting up thin plate regression 
  splines, and a noticeable speed penalty. This is now fixed, with many thanks
  David Shavlik for reporting the slow down.  

* Namespace modified to import from methods. Dependency on stats and graphics
  made explicit.

* "re" smooths are no longer subject to side constraint under nesting (since
  this is almost alway un-necessary and undesirable, and often unexpected).

* side.con modified to allow smooths to be excluded and to allow side 
  constraint computation to take account of penalties (unused at present).

1.7-12

* bam can now compute the leading order QR decomposition on a cluster
  set up using the parallel package.
